Исправление верстки главной страницы

--- a/templates/index.html/index.sm.html
+++ b/templates/index.html/index.sm.html
@@ -35,7 +35,7 @@
     {/foreach}
 </div>
 
-<div id="yandex_ad"></div>
+<div id="yandex_ad" style="clear:both;"></div>
 <script type="text/javascript" src="/js/adv_city.js"></script>
 <style>
     h3 {
