blog.all.sm.html отредактирован онлайн на Bitbucket

--- a/templates/blog/blog.all.sm.html
+++ b/templates/blog/blog.all.sm.html
@@ -17,8 +17,7 @@
     </h2>
     <div class="blog_attrs">
         <img src="/img/ico/ico.calendar.gif" class="textmarker" />
-        {$entry.bg_datex},
-        {$entry.us_name}
+        {$entry.bg_datex}
         {if $entry.br_active == 0 && $blogadmin == true}, отключено{/if}
         {if $entry.br_showed == 0 && $blogadmin == true}, отложено{/if}
     </div>
