blog.calendar.sm.html отредактирован онлайн на Bitbucket

--- a/templates/blog/blog.calendar.sm.html
+++ b/templates/blog/blog.calendar.sm.html
@@ -39,7 +39,7 @@
 <div class="blog_record">
     <h4 class="blog_title"><a href="/blog/{$entry.bg_year}/{$entry.bg_month}/{$entry.bg_day}.html">{$entry.br_title}</a></h4>
     <div class="blog_attrs" style="margin-top:1px;">
-        <img src="/img/ico/ico.calendar.gif" class="textmarker" />&nbsp;{$entry.br_datex},&nbsp;{$entry.us_name}</div>
+        <img src="/img/ico/ico.calendar.gif" class="textmarker" />&nbsp;{$entry.br_datex}</div>
     {$entry.br_text}
 </div>
 {/foreach}
