blog.one.sm.html отредактирован онлайн на Bitbucket

--- a/templates/blog/blog.one.sm.html
+++ b/templates/blog/blog.one.sm.html
@@ -2,7 +2,7 @@
     <h2 class="blog_title">{$entry.br_title}</h2>
     <div class="blog_attrs">
         <img src="/img/ico/ico.calendar.gif" class="textmarker" />&nbsp;
-        {$entry.bg_datex},&nbsp;{$entry.us_name}
+        {$entry.bg_datex}
     </div>
     {$entry.br_text}
 </div>
