--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -2,7 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="utf-8" />
-        <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+        <!--[if lt IE 9]>
+            <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
         <title>{$page->title}</title>
         <meta name="keywords" content="{$page->keywords|escape:"html"}" />
               <meta name="description" content="{$page->description|escape:"html"}" />
@@ -13,9 +15,14 @@
                 <link rel="search" href="/search/" />
                 <link rel="copyright" href="/about/" />
                 <link rel="start" href="http://{$page->basepath}/" />
+                <meta name="viewport" content="width=device-width; initial-scale=1.0">
                 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans&amp;subset=latin,cyrillic-ext,cyrillic" type="text/css"/>
                 <link rel="stylesheet" href="/css/{$page->mainfile_css}" type="text/css" media="screen, projection, print"/>
+                <link href="/css/media-queries.css" rel="stylesheet" type="text/css">
                 <!--[if lte IE 6]><link rel="stylesheet" href="/css/style_ie.css" type="text/css" media="screen, projection, print" /><![endif]-->
+                <!--[if lt IE 9]>
+                    <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+                <![endif]-->
                 <script type="text/javascript" src="http://yandex.st/jquery/1.7.2/jquery.min.js"></script>
                 <script type="text/javascript" src="http://{$page->basepath}/js/jquery.simplemodal.1.4.min.js"></script>
                 <script type="text/javascript" src="http://www.panoramio.com/wapi/wapi.js?v=1&amp;hl=ru"></script>
