--- a/css/common.v2.9.css
+++ b/css/common.v2.9.css
@@ -76,36 +76,6 @@ strong {
     margin:0 auto;
 }
 
-@media screen and (max-width: 980px) {
-    #content {
-        color:red;
-    }
-}
-@media screen and (max-width: 650px) {
-    #content {
-        color:red;
-    }
-}
-@media screen and (max-width: 480px) {
-    html {
-        -webkit-text-size-adjust: none;
-    }
-    #city_float {
-        display:none;
-    }
-    #content {
-        font-size: 90%;
-        padding: 10px 8px;
-        color:red;
-    }
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-    width: auto\9;
-}
-
 /* Common
 -----------------------------------------------------------------------------*/
 ul.menu_common {
@@ -845,4 +815,122 @@ textarea.feedinput {
     #yandex_ad {
         display:none;
     }
+}
+
+/* Media for adaptive
+-----------------------------------------------------------------------------*/
+/* IPad (landscape) ----------- */
+@media screen and (max-width: 980px) {
+    #content {
+
+    }
+}
+/* IPad (portrait) ----------- */
+@media screen and (max-width: 650px) {
+    #content {
+
+    }
+}
+/* Smartphones (landscape) ----------- */
+@media screen and (max-width: 480px) {
+    html {
+        -webkit-text-size-adjust: none;
+    }
+    #wrapper {
+        min-width: 480px;
+        max-width: 480px;
+    }
+    #city_float {
+        display:none;
+    }
+    #widget_photos {
+        display:none;
+    }
+    #content {
+        font-size: 90%;
+        padding: 10px 8px;
+    }
+}
+/* Smartphones (portrait) ----------- */
+@media screen and (max-width: 320px) {
+    html {
+        -webkit-text-size-adjust: none;
+    }
+    #wrapper {
+        min-width: 320px;
+        max-width: 320px;
+    }
+    #header {
+        height:80px;
+        background:none;
+    }
+    #header img {
+        display:block;
+        margin: 30px auto;
+        height:100px;
+    }
+    #mainmenu {
+        position:absolute;
+        top:0;
+        margin:-10px 0;
+        height:42px;
+        width:100%;
+        font-size:inherit;
+    }
+    #mainmenu form {
+        display:none;
+    }
+    #mainmenu #show_auth_form {
+        display:none;
+    }
+    #content h1 {
+        height: 20px;
+        font-size:11pt;
+    }
+    #content h2 {
+        height: 20px;
+        font-size:10pt;
+    }
+    #city_path {
+        display:none;
+    }
+    #object_icon {
+        display:none;
+    }
+    #city_float {
+        display:none;
+    }
+    #map_container {
+        float: none;
+        width:100%;
+    }
+    #point_gps {
+        font-size: 50%;
+    }
+    #object_description {
+        margin:0;
+    }
+    #widget_photos {
+        display:none;
+    }
+    #content {
+        font-size: 90%;
+    }
+    .points_selector {
+        float: none;
+        width: 100%;
+        background: none;
+    }
+    .points_selector li {
+        display: inline-block;
+        width:40px;
+    }
+    #object_contacts_block {
+        width:100%;
+    }
+    .objlink {
+        font-size: 90%;
+    }
+    .point_gpsshort {display:none;}
+    
 }
