--- a/css/common.v2.9.css
+++ b/css/common.v2.9.css
@@ -902,7 +902,15 @@ textarea.feedinput {
     }
     #map_container {
         float: none;
-        width:100%;
+        width:300px;
+        height:200px;
+        margin-right:8px;
+        margin-left:-8px;
+    }
+    #city_map {
+        width:90%;
+        height:99%;
+        margin:0 auto;
     }
     #point_gps {
         font-size: 50%;
