--- a/css/common.v2.9.css
+++ b/css/common.v2.9.css
@@ -943,6 +943,9 @@ textarea.feedinput {
         height:99%;
         margin:0 auto;
     }
+    #point_gps {
+        display:none;
+    }
     .points_selector {
         float: none;
         width: 100%;
@@ -1049,11 +1052,10 @@ textarea.feedinput {
         float: none;
         width:100%;
         height:200px;
-        margin-right:8px;
-        margin-left:-8px;
+        margin-left:0;
     }
     #city_map {
-        width:90%;
+        width:100%;
         height:99%;
         margin:0 auto;
     }
@@ -1177,13 +1179,12 @@ textarea.feedinput {
     }
     #map_container {
         float: none;
-        width:300px;
+        width:100%;
         height:200px;
-        margin-right:8px;
-        margin-left:-8px;
+        margin-left:0;
     }
     #city_map {
-        width:90%;
+        width:100%;
         height:99%;
         margin:0 auto;
     }
