common.v2.9.css отредактирован онлайн на Bitbucket

--- a/css/common.v2.9.css
+++ b/css/common.v2.9.css
@@ -912,6 +912,8 @@ textarea.feedinput {
         top: -18px;
     }
     #content h1 {
+        width: 100%;
+        padding-left: 2px;
         height: 26px;
         padding-top: 0;
         font-size:13pt;
@@ -1032,6 +1034,8 @@ textarea.feedinput {
         display:none;
     }
     #content h1 {
+        width: 100%;
+        padding-left: 2px;
         height: 20px;
         font-size:11pt;
     }
@@ -1158,6 +1162,8 @@ textarea.feedinput {
         top: -9px;
     }
     #content h1 {
+        width: 100%;
+        padding-left: 2px;
         height: 20px;
         font-size:11pt;
     }
